--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "deploy": "hexo clean && hexo g -d",
+    "start": "hexo clean && hexo g && hexo s"
+  },
   "hexo": {
     "version": "3.8.0"
   },
