--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,12 @@ script:
 - hexo clean
 - hexo generate
 after_script:
+  - git clone https://${GH_REF} .deploy_git 
+  - cd .deploy_git
+  - git checkout master
+  - cd ../
+  - mv .deploy_git/.git/ ./public/
   - cd ./public
-  - git init
   - git config user.name "LbhFront-end"
   - git config user.email "544289495@qq.com"
   - git add .
