fiexd: change export TZ from Beijing to Shanghai

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   directories:
   - node_modules
 before_install:
-- export TZ='Asia/Beijing'
+- export TZ='Asia/Shanghai'
 - npm install -g hexo
 - npm install -g hexo-cli
 before_script:
