fix: fix frined links 林毅峰

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -180,7 +180,7 @@ links:
   陈健斌: https://www.jianshu.com/u/701a8bbf4f7e
   咖喱: https://jl66.github.io/
   汤姆Tom酱: https://itobys.github.io/
-  林毅锋: https://breeze2.github.io/
+  林毅锋: https://breeze2.github.io/blog/
   百度: https://www.baidu.com/s?ie=UTF-8&wd=site%3Alaibh.top
   谷歌: https://www.google.com.hk/search?safe=strict&source=hp&ei=zXdWXfemLJbO0PEP8qyXyA0&q=site%3Alaibh.top&oq=site%3Alaibh.top&gs_l=psy-ab.3...580.8501..8767...0.0..0.397.934.2-1j2......0....2j1..gws-wiz.QESXfWGadT0&ved=0ahUKEwi3wbusiofkAhUWJzQIHXLWBdkQ4dUDCAU&uact=5
   # csdoker: https://csdoker.com
