fix: change friend John Link

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -166,7 +166,7 @@ links:
   醉萝卜: http://www.chjtx.com/JRoll/
   Zhendong: https://zhdaa.github.io/
   cnyballk: https://www.cnblogs.com/cnyball
-  John: http://xzzdll.cn/
+  John: http://johnzz.top/
   xiaojun1994: https://xiaojun1994.top/
   Airing: https://me.ursb.me
   游魂: https://www.iyouhun.com
