feat: add friend link 余腾靖的博客

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -182,6 +182,7 @@ links:
   汤姆Tom酱: https://itobys.github.io/
   林毅锋: https://breeze2.github.io/blog/
   大鹏博客: http://www.qzroc.com/
+  余腾靖的博客: https://lyreal666.com/
   百度: https://www.baidu.com/s?ie=UTF-8&wd=site%3Alaibh.top
   谷歌: https://www.google.com.hk/search?safe=strict&source=hp&ei=zXdWXfemLJbO0PEP8qyXyA0&q=site%3Alaibh.top&oq=site%3Alaibh.top&gs_l=psy-ab.3...580.8501..8767...0.0..0.397.934.2-1j2......0....2j1..gws-wiz.QESXfWGadT0&ved=0ahUKEwi3wbusiofkAhUWJzQIHXLWBdkQ4dUDCAU&uact=5
   # csdoker: https://csdoker.com
