--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -164,7 +164,7 @@ links_title: 友情链接
 links_layout: inline
 links:
   醉萝卜: http://www.chjtx.com/JRoll/
-  Zhendong: https://zhdaa.github.io/
+  Zhendong: http://hzd.plus/
   cnyballk: https://www.cnblogs.com/cnyball
   John: http://johnzz.top/
   xiaojun1994: https://xiaojun1994.top/
