feat: 修改deploy.yml node版本

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
           submodules: true
 
       - name: Setup Node.js
-        uses: actions/cache@v1
+        uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '12'
 
       - name: Install dependencies & Generate static files
         run: |
