--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,11 +40,11 @@ jobs:
         env:
             GIT_NAME: LbhFront-end
             GIT_EMAIL: 544289495@qq.com
-            REPO: github.com/LbhFront-end/LbhFront-end.github.io
+            GH_REF: github.com/LbhFront-end/LbhFront-end.github.io
             GH_TOKEN : ${{ secrets.GH_TOKEN  }}
         run: |
             cd ./public && git init && git add .
             git config --global user.name $GIT_NAME
             git config --global user.email $GIT_EMAIL
             git commit -m "github Actions 自动生成 于 `date +"%Y-%m-%d %H:%M"`"
-            git push --force --quiet "https://GH_TOKEN@$REPO" master:master
+            git push --force --quiet "https://$GH_TOKEN@$GH_REF" master:master
