--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,23 +28,36 @@ jobs:
         with:
           path: node_modules
           key: ${{runner.OS}}-npm-caches-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+          ${{ runner.os }}-node-
 
-      - name: Install dependencies & Generate static files
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
             node -v
             npm i -g hexo-cli
             npm i
+
+      - name:  Generate static files
+        run: |
             hexo clean
             hexo g
+
       - name: Deploy to Github Pages
         env:
-            GIT_NAME: LbhFront-end
-            GIT_EMAIL: 544289495@qq.com
-            GH_REF: github.com/LbhFront-end/LbhFront-end.github.io
-            GH_TOKEN : ${{ secrets.GH_TOKEN  }}
+          GIT_NAME: LbhFront-end
+          GIT_EMAIL: 544289495@qq.com
+          GH_REF: github.com/LbhFront-end/LbhFront-end.github.io
+          GH_TOKEN : ${{ secrets.GH_TOKEN  }}
         run: |
-            cd ./public && git init && git add .
-            git config --global user.name $GIT_NAME
-            git config --global user.email $GIT_EMAIL
+            git clone https://$GH_REF .deploy_git
+            cd .deploy_git
+            git checkout master
+            cd ../
+            mv .deploy_git/.git/ ./public/
+            cd ./public
+            git config --global user.name "$GIT_NAME"
+            git config --global user.email "$GIT_EMAIL"
+            git add .
             git commit -m "github Actions 自动生成 于 `date +"%Y-%m-%d %H:%M"`"
             git push --force --quiet "https://$GH_TOKEN@$GH_REF" master:master
