--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           GIT_USER : LbhFront-end
           GIT_EMAIL : 544289495@qq.com
-          HEXO_DEPLOY_PRI : ${{ HEXO_DEPLOY_PRI }}
+          HEXO_DEPLOY_PRI : ${{ secrets.HEXO_DEPLOY_PRI }}
         run: |
             sudo timedatectl set-timezone "Asia/Shanghai"
             mkdir -p ~/.ssh/
