--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -170,15 +170,12 @@ links:
   xiaojun1994: https://xiaojun1994.top/
   Airing: https://me.ursb.me
   游魂: https://www.iyouhun.com
-  饼干的垃圾堆: http://www.teoblog.cn/
   荒野之萍: https://icoty.github.io/
   imOne: https://im-one.github.io/
-  赵子君: http://zzjshuo.club
   Ambre: http://blog.hourxu.com/
   胡雨: http://www.huyujs.com
   安逗: https://www.andou.live
   陈健斌: https://www.jianshu.com/u/701a8bbf4f7e
-  咖喱: https://jl66.github.io/
   汤姆Tom酱: https://itobys.github.io/
   林毅锋: https://breeze2.github.io/blog/
   大鹏博客: http://www.qzroc.com/
@@ -186,6 +183,10 @@ links:
   不作声: https://buzuosheng.com/
   百度: https://www.baidu.com/s?ie=UTF-8&wd=site%3Alaibh.top
   谷歌: https://www.google.com.hk/search?safe=strict&source=hp&ei=zXdWXfemLJbO0PEP8qyXyA0&q=site%3Alaibh.top&oq=site%3Alaibh.top&gs_l=psy-ab.3...580.8501..8767...0.0..0.397.934.2-1j2......0....2j1..gws-wiz.QESXfWGadT0&ved=0ahUKEwi3wbusiofkAhUWJzQIHXLWBdkQ4dUDCAU&uact=5
+  # 咖喱: https://jl66.github.io/
+  # 赵子君: http://zzjshuo.club
+  # 黄链
+  # 饼干的垃圾堆: http://www.teoblog.cn/
   # csdoker: https://csdoker.com
   # TopCoding: http://47.95.216.33
   # 林俊城: https://blog.csdn.net/qq_43705991
