fix: hexo前加 npx指令

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,4 +58,4 @@ jobs:
 
       - name: Deploy to Github Pages
         run: |
-            hexo deploy --generate
+            npx hexo deploy --generate
